# speech-recognition

./: README.md  settings.gradle.kts
example/: build.gradle.kts
example/src/main/kotlin/application/: Application.kt
example/src/main/kotlin/capturing/: LineCapturingService.kt
example/src/main/kotlin/interaction/: InteractionScreen.kt  SpeechRecognitionItem.kt
example/src/main/kotlin/selector/: SpeechRecognitionItemSelector.kt
jni/: .gitattributes  CMakeLists.txt
jni/include/: Java_com_github_numq_stt_NativeSTT.h  deleter.h  ggml-cpu.h
jni/src/: Java_com_github_numq_stt_NativeSTT.cpp
